[tool.poetry]
name = "ha-sharp-cocoro"
version = "1.2"
description = ""
authors = ["David Mohl <git@d.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
sharp-cocoro = {git = "http://github.com/dvcrn/sharp-cocoro.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
